--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ $(function() {
 <div class="contents">
 <div class="textblock"><p><a class="anchor" id="md_README"></a></p>
 <p align="center"></p>
-<p><img src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/virtual_console_wii_u_7/H2x1_WiiUVC_RType.jpg" alt="stickos" class="inline"/ style="width: 60%"> </p>
+<p><img src="https://fs-prod-cdn.nintendo-europe.com/media/images/10_share_images/games_15/virtual_console_wii_u_7/H2x1_WiiUVC_RType.jpg" alt="stickos" class="inline" style="width: 60% !important;"> </p>
 <p><img src="https://img.shields.io/badge/Langage-C%2B%2B-green" alt="Top Language" class="inline"/> <img src="https://img.shields.io/badge/Format-WebKit-orange" alt="code style" class="inline"/> <img src="https://img.shields.io/badge/Graphical-SFML-blue" alt="Graphical" class="inline"/></p>
 <h1><a class="anchor" id="autotoc_md0"></a>
 R-Type</h1>
